# local-dns-forwarder

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
misc/: config.toml.template
misc/systemd/: ldf.service  lff.service
src/: allowlist.rs  error.rs  lib.rs  logger.rs  resolve_event.rs  resolved_data.rs  resolved_status.rs  server.rs
src/allow_deny_list/: mod.rs
src/dns/: byte_packet_buffer.rs  error.rs  func.rs  header.rs  message.rs  mod.rs  query_type.rs  question.rs  record.rs  result_code.rs
src/filters/: checklist.rs  composite_checklist.rs  mod.rs
