[package]
name = "local-fqdn-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.9", features = ["derive"] }
toml = "0.8.14"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wildmatch = "2.3.4"

[[bin]]
name = "lff"
path = "src/bin/lff.rs"
