[package]
name = "local-fqdn-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wildmatch = "2.4.0"
chrono = "0.4.38"

[[bin]]
name = "lff"
path = "src/bin/lff.rs"
