[package]
name = "local-dns-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
ipctl = { git = "https://github.com/niumlaque/ipctl", branch = "master", features = ["tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wildmatch = "2.4.0"
chrono = "0.4.40"

[[bin]]
name = "ldf"
path = "src/bin/ldf.rs"
